# dstdsv

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish.yml
src/dstdsv/: __about__.py  __init__.py
src/dstdsv/utils/: list_devices.py  test_measure.py
tests/: __init__.py
